# back/src/routers/postRouter.ts
@@ -14,12 +14,33 @@ postRouter.get(
   checkPost,
   asyncHandler(postController.findPost)
 );
-postRouter.get("/", asyncHandler(postController.findAll));
+postRouter.get("/order/desc", asyncHandler(postController.findAllDesc));
+postRouter.get("/order/asc", asyncHandler(postController.findAllAsc));
 postRouter.get(
-  "/my/posts",
+  "/order/comment",
   loginRequired,
-  asyncHandler(postController.findMyPosts)
+  asyncHandler(postController.findAllCommentCount)
 );
+postRouter.get("/search/post", asyncHandler(postController.searchPost));
+
+postRouter.get(
+  "/myInfo/order/desc",
+  loginRequired,
+  asyncHandler(postController.findMyPostsDesc)
+);
+
+postRouter.get(
+  "/myInfo/order/asc",
+  loginRequired,
+  asyncHandler(postController.findMyPostsAsc)
+);
+
+postRouter.get(
+  "/myInfo/order/comment",
+  loginRequired,
+  asyncHandler(postController.findMyPostsCommentCount)
+);
+
 postRouter.patch(
   "/update/:id",
   loginRequired,
